<resources>
    <!--Application-->
    <string name="app_name">Haz Fútbol</string>

    <!--Buttons-->
    <string name="facebook_register">Conectar con <b>Facebook</b></string>
    <string name="create_user">Crear Usuario</string>
    <string name="next">></string>
    <string name="upload">Examinar</string>
    <string name="my_team">Mi Equipo</string>
    <string name="matches">Pichangas</string>
    <string name="tournaments">Torneos</string>
    <string name="create_team">Crear Equipo</string>
    <string name="add_new_player">Agregar otro jugador</string>
    <string name="create_account">Crear Cuenta</string>

    <!--Links-->
    <string name="login">Iniciar Sesión</string>

    <!--TextViews-->
    <string name="register_question1">¿Cómo te llamas?</string>
    <string name="register_question2">¿Cuándo naciste?</string>
    <string name="register_question3">¿Y tu correo electrónico?</string>
    <string name="register_question4">¿Cómo te llaman en la cancha?</string>
    <string name="register_question5">¿Cúales son las características de tu juego?</string>
    <string name="register_question5_option">Puedes escojer más de una</string>
    <string name="register_question5_option2">Si no la encuentras, escríbela aquí</string>
    <string name="terms_of_use"><b><u>Términos de Uso</u></b></string>
    <string name="terms_full_text">
        <![CDATA[
        <html><head></head><body>
        <h3><b>1. Presentación</b></h3>
        <p style="text-align:justify;">
            <b>1.1</b> El presente documento establece las condiciones contractuales de acceso y uso de la red social HAZFUTBOL.COM, en adelante LA RED, propiedad de SPORT NET S.A.C., en adelante SPORT NET, con RUC 20547195745, registrada en Lima, Perú, y de la otra parte Usted, en adelante EL USUARIO, desde el momento en que usted se registra, momento en el cual ha manifestado haberlo leído y estar de acuerdo con cumplir su contenido.
        </p>
        <p style="text-align:justify;">
            <b>1.2</b> Los servicios que le ofrece SPORT NET a través de LA RED,
            serán gratuitos para EL USUARIO que tenga el perfil de JUGADOR,
            sin que SPORT NET tenga el impedimento de implementar nuevos
            servicios que requieran del pago de tarifas especiales. El
             alcance de la gratuidad de los servicios de LA RED, no son
             aplicables a los Tipos de Usuario: Propietarios de Canchas,
             Organizadores de Torneos y Proveedores, quienes tendrán su
             propio contrato con SPORT NET y en el cual, se regularan los
             servicios y las retribuciones pertinentes.
        </p><br/><hr>
        <h3><b>2. Compromiso del Usuario</b></h3>
        <p style="text-align:justify;">
            <b>2.1</b> EL USUARIO declara que todos los datos que registre en LA
             RED serán reales. SPORT NET queda autorizado, más no obligado,
              a verificar los datos de EL USUARIO, para lo cual podrá
              requerirle a través del correo con el que se registró en
              LA RED, su acreditación documentaria. Si EL USUARIO no
              respondiera al correo enviado dentro del plazo de 24 horas,
              o su explicación no fuera suficiente para SPORT NET,
               éste quedará autorizado a suspender o a cancelar su registro,
               según le parezca.
        </p>
        <p style="text-align:justify;">
            <b>2.2</b> EL USUARIO declara que es mayor de 18 años y que no tiene
            impedimento legal para contratar servicios como el de LA RED.
        </p>
        <p style="text-align:justify;">
            <b>2.3</b> Para utilizar LA RED, EL USUARIO se compromete a emplear una
            computadora o dispositivo que cumpla las mismas funciones,
            una conexión a Internet y las últimas versiones de cualquier
            navegador compatible con lenguaje HTML, CSS3 y que admita la
            ejecución de aplicaciones en lenguaje JavaScript. Asimismo,
            deberá configurar su navegador para que acepte cookies.
        </p>
        </body></html>
    ]]></string>
    <string name="upload_your_photo">Sube tu foto</string>
    <string name="join_team">O también puedes unirte a uno</string>
    <string name="name_your_team">Ponle un nombre a tu equipo</string>
    <string name="team_city">Distrito del equipo</string>
    <string name="invite_teammates">Invita a tus patas a tu equipo</string>
    <string name="suggestion">Sugerencia</string>
    <string name="create_emblem">Crea tu escudo</string>
    <string name="shape">Forma</string>
    <string name="color">Color</string>
    <string name="text">Texto</string>
    <string name="detail">Detalle</string>
    <string name="team_message_rule">Los mensajes enviados los verán solo
        los miembros de tu equipo</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>

    <!--Hints-->
    <string name="search_team">Buscar equipo...</string>
    <string name="search_player">Buscar jugador...</string>
    <string name="write_message">Escribir mensaje...</string>

    <!--Tabs-->
    <string name="wall">Muro</string>
    <string name="players">Jugadores</string>
    <string name="photos">Fotos</string>

    <!--Forms-->
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="birth_date">Fecha de Nacimiento</string>
    <string name="gender">Sexo</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="nickname">Apodo</string>
    <string name="rate_yourself">Califícate</string>
    <string name="amateur">Amateur</string>
    <string name="professional">Profesional</string>
    <string name="goalkeeper">Arquero</string>
    <string name="defender">Defensa</string>
    <string name="midfielder">Volante</string>
    <string name="forward">Delantero</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="skip"><u>Saltar</u></string>
    <string name="user">Usuario</string>
    <string name="select_date">Seleccionar fecha</string>

    <!--Toast messages-->
    <string name="user_register_incomplete1">Debe ingresar nombre y apellidos</string>
    <string name="user_register_incomplete2">Debe ingresar fecha de nacimiento</string>
    <string name="user_register_incomplete3">Debe ingresar email y contraseña</string>
    <string name="user_register_incomplete4">Debe ingresar una foto de perfil</string>

    <!--Validation error tooltip-->
    <string name="name_mandatory">El nombre es obligatorio</string>
    <string name="last_name_mandatory">El apellido es obligatorio</string>
    <string name="birth_date_mandatory">La fecha de nacimiento es obligatoria</string>
    <string name="email_mandatory">El email es obligatorio</string>
    <string name="password_mandatory">La contraseña es obligatoria</string>

</resources>
