<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_my_team"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:background="@color/hf_light_blue"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMyTeams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <Button
                android:id="@+id/btnCreateTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_light_blue_rounded_corners"
                android:text="@string/create_team"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/join_team"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_color_blue"
                android:drawableRight="@drawable/search_icon"
                android:hint="@string/search_team"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_light_blue_rounded_corners"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="35dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>