<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fragment_register2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_register"
                android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="40dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/hf_logo_plain_small"/>

                <TextView
                    android:id="@+id/lblQuestion2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_question2"
                    android:textColor="@color/white"
                    android:textSize="25sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="50dp">

                <EditText
                    android:id="@+id/txtBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_color_green"
                    android:focusable="false"
                    android:hint="@string/birth_date"
                    android:inputType="date"
                    android:imeOptions="actionDone"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/gender"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="18sp"/>

                    <RadioGroup
                        android:id="@+id/rbtnGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp">

                        <RadioButton
                            android:id="@+id/rbtnMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/white"
                            android:text="@string/male"
                            android:textColor="@color/white"
                            />

                        <RadioButton
                            android:id="@+id/rbtnFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:buttonTint="@color/white"
                            android:text="@string/female"
                            android:textColor="@color/white"/>
                    </RadioGroup>


                </LinearLayout>


                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_green_rounded_corners"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="35dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>