<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_init"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="10dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="59dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:src="@drawable/hf_logo_welcome" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <Button
            android:id="@+id/btnFacebookRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue_rounded_corners"
            android:text="@string/facebook_register"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_green_rounded_corners"
            android:text="@string/create_user"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>