<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_register3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_register"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="40dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/hf_logo_plain_small" />

                <TextView
                    android:id="@+id/lblQuestion3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_question3"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="30dp">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_color_green"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/edittext_color_green"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_green_rounded_corners"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="35dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>